--- a/View/HomePage/StatusCell/StatusNormalCell.xib
+++ b/View/HomePage/StatusCell/StatusNormalCell.xib
@@ -78,12 +78,29 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="自己的评论" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWg-Z4-yCz" userLabel="正文">
-                        <rect key="frame" x="12" y="66.000000000000028" width="516" height="385.66666666666674"/>
+                        <rect key="frame" x="12" y="66" width="516" height="15.666666666666671"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SAB-wK-evT" userLabel="图片视图容器" customClass="PictureContainerView" customModule="WB" customModuleProvider="target">
+                        <rect key="frame" x="12" y="81.666666666666657" width="516" height="378.33333333333337"/>
+                        <color key="backgroundColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" id="NxV-u3-7NT"/>
+                        </constraints>
+                        <connections>
+                            <outlet property="containerHeight" destination="NxV-u3-7NT" id="ITR-I2-h6t"/>
+                        </connections>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfz-UE-Lt6" userLabel="分割线">
+                        <rect key="frame" x="12" y="463" width="516" height="1"/>
+                        <color key="backgroundColor" white="0.84168836805555558" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Z0L-7x-1P6"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYj-G0-MQu" userLabel="底部工具栏">
                         <rect key="frame" x="12" y="464.66666666666669" width="516" height="28"/>
                         <subviews>
@@ -137,22 +154,16 @@
                             <constraint firstAttribute="bottom" secondItem="4Qt-18-e0Q" secondAttribute="bottom" id="uuf-XQ-bSr"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfz-UE-Lt6" userLabel="分割线">
-                        <rect key="frame" x="12" y="463.66666666666669" width="516" height="1"/>
-                        <color key="backgroundColor" white="0.84168836805555558" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="Z0L-7x-1P6"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="5Ye-rh-cls" firstAttribute="leading" secondItem="BTv-SW-mx5" secondAttribute="trailing" constant="11" id="0Xs-05-6ig"/>
-                    <constraint firstItem="zfz-UE-Lt6" firstAttribute="top" secondItem="EWg-Z4-yCz" secondAttribute="bottom" constant="12" id="4vc-hv-UmV"/>
                     <constraint firstItem="EWg-Z4-yCz" firstAttribute="top" secondItem="BTv-SW-mx5" secondAttribute="bottom" constant="12" id="6jZ-y2-xcf"/>
+                    <constraint firstItem="SAB-wK-evT" firstAttribute="top" secondItem="EWg-Z4-yCz" secondAttribute="bottom" id="7Cw-09-Hlm"/>
                     <constraint firstItem="aVN-QY-ZlH" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" id="7do-93-BuS"/>
                     <constraint firstItem="EoS-qh-pzE" firstAttribute="centerY" secondItem="BTv-SW-mx5" secondAttribute="bottom" id="JSr-Ic-0ay"/>
                     <constraint firstItem="Dlc-01-ohY" firstAttribute="leading" secondItem="mB5-vg-0UI" secondAttribute="trailing" constant="5" id="LFv-rJ-PVK"/>
                     <constraint firstItem="5Ye-rh-cls" firstAttribute="top" secondItem="aVN-QY-ZlH" secondAttribute="bottom" constant="10" id="LSx-hK-XeF"/>
+                    <constraint firstItem="zfz-UE-Lt6" firstAttribute="top" secondItem="SAB-wK-evT" secondAttribute="bottom" constant="3" id="LWL-2g-Z3Z"/>
                     <constraint firstAttribute="bottom" secondItem="YYj-G0-MQu" secondAttribute="bottom" id="PMj-ns-ojp"/>
                     <constraint firstItem="YYj-G0-MQu" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" constant="12" id="QMI-G9-vvO"/>
                     <constraint firstItem="aVN-QY-ZlH" firstAttribute="top" secondItem="LWE-Ix-6UD" secondAttribute="top" id="Rqw-lR-rUg"/>
@@ -164,10 +175,12 @@
                     <constraint firstItem="Uqa-N9-UFv" firstAttribute="centerY" secondItem="5Ye-rh-cls" secondAttribute="centerY" id="eJM-2H-3rk"/>
                     <constraint firstItem="Uqa-N9-UFv" firstAttribute="leading" secondItem="5Ye-rh-cls" secondAttribute="trailing" constant="3" id="fcW-70-dEu"/>
                     <constraint firstItem="EWg-Z4-yCz" firstAttribute="leading" secondItem="BTv-SW-mx5" secondAttribute="leading" id="i0J-PB-dls"/>
+                    <constraint firstItem="SAB-wK-evT" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" constant="12" id="om2-ni-17J"/>
                     <constraint firstAttribute="trailing" secondItem="EWg-Z4-yCz" secondAttribute="trailing" constant="12" id="pC2-fX-aAf"/>
                     <constraint firstItem="BTv-SW-mx5" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" constant="12" id="qYp-Uh-2G7"/>
                     <constraint firstItem="YYj-G0-MQu" firstAttribute="top" secondItem="zfz-UE-Lt6" secondAttribute="bottom" id="qwg-aP-SRo"/>
                     <constraint firstItem="EoS-qh-pzE" firstAttribute="centerX" secondItem="BTv-SW-mx5" secondAttribute="trailing" id="uRc-mm-jJi"/>
+                    <constraint firstAttribute="trailing" secondItem="SAB-wK-evT" secondAttribute="trailing" constant="12" id="uaE-sq-K2q"/>
                     <constraint firstAttribute="trailing" secondItem="aVN-QY-ZlH" secondAttribute="trailing" id="vcB-Tq-2Hd"/>
                     <constraint firstAttribute="trailing" secondItem="YYj-G0-MQu" secondAttribute="trailing" constant="12" id="ypV-Mc-UoL"/>
                     <constraint firstAttribute="trailing" secondItem="zfz-UE-Lt6" secondAttribute="trailing" constant="12" id="zfQ-hi-mp9"/>
@@ -186,7 +199,7 @@
                 <outlet property="zhuanFaBtn" destination="4Qt-18-e0Q" id="uPt-JE-vs7"/>
                 <outlet property="zhuanFaBtnWidth" destination="alH-NO-Nau" id="rW8-Ye-RFf"/>
             </connections>
-            <point key="canvasLocation" x="-4625" y="-651"/>
+            <point key="canvasLocation" x="-5868" y="-719"/>
         </tableViewCell>
     </objects>
     <resources>
